# PneumoniaDetectionCNN

./: README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js
client/src/components/Home/: Home.css  Home.js
client/src/components/LandingPage/: LandingPage.css  LandingPage.js
server/: app.py  procfile  pyproject.toml  render.yaml  requirements.txt
server/newpneumonia_detector_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
server/newpneumonia_detector_model/variables/: variables.index
