[project]
name = "server"
version = "0.1.0"
description = "Pneumonia Detection CNN API"
authors = [
    {name = "ANSHUL JAISWAL", email = "anshul.jaiswal428@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "gunicorn==23.0.0",
    "python-dotenv==1.1.1",
    "tensorflow==2.20.0",
    "numpy",
    "pillow"
]
